adding the models, collections, and some views. all the basic wiring is here along with mock objects

--- a/public/javascripts/apps/donuts/resources/templates/index.html
+++ b/public/javascripts/apps/donuts/resources/templates/index.html
@@ -1,1 +1,4 @@
-<h1>Box O Donutz</h1>
+<h1><%=lang.getText( "title", locale )%></h1>
+<input type="radio" name="quantity" value="dozen" /><%=lang.getText( "dozen", locale )%><br />
+<input type="radio" name="quantity"  value="hundred" /><%=lang.getText( "hundred", locale )%>
+<div class="containerForBox" ></div>
