--- a/public/javascripts/apps/donuts/resources/styles.css
+++ b/public/javascripts/apps/donuts/resources/styles.css
@@ -1,7 +1,3 @@
-@font-face {  
-  font-family: boxy ;  
-  src: url( 'fonts/foldstruct.ttf' ) format("truetype");  
-}  
 body{
 	background-color: #0A2B4E;
 	background-image: url('images/bg_bluedots_10_small.png');
@@ -27,6 +23,13 @@ h1{
 .donut{
 	margin: 1px;
 	padding: 10px;
+}
+.numDonuts{
+	font-family: 'Kaushan Script', cursive, verdana, helvetica, sans-serif;
+	font-size: 1em;
+	display: inline-block;
+	margin-top:54px;
+	margin-left:30px
 }
 .pointer{
 	cursor: pointer;
